Fix bug where last thumbnail of first row wrapped in Image View.

--- a/views/public/css/avantsearch.css
+++ b/views/public/css/avantsearch.css
@@ -458,7 +458,6 @@ input[type="checkbox"] {
   	background-color: #fff;
 	clear: both;
 	display: inline-block;
-  	height: 2.25em;
   	margin: 0 0 .5em 0;
 	padding-left: 0;
 	vertical-align: top;
